# zugferd

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: filematcher.rs  lib.rs  main.rs  zugferd.rs
src/zugferd/: cli.rs  error.rs  filematcher.rs
