[package]
name = "zugferd"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
# pdf = "0.9.0"
# FIXME: We specify the github repository to get the version after the ref resolution pull request has been accepted
pdf = { git = "https://github.com/pdf-rs/pdf.git", rev = "b69e0753c9d6adff567b911494309798e0954e6a" }
