[package]
name = "zugferd"
version = "1.0.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
# pdf = "0.9.0"
# FIXME: We specify my forked repository to get the version with support for associated files and
#        disabled Date parsing as some PDFs I encountered seem to contain the wrong ' character in dates.
pdf = { git = "https://github.com/lSoleyl/pdf.git", branch = "lax_parsing" }
regex = "1.11.1"
